Small change dwbi

--- a/mark1.ipynb
+++ b/mark1.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
     "        return []\n",
     "\n",
     "# Example usage\n",
-    "channel_name = \"Ali Abdal\"\n",
+    "channel_name = \"DanTDM\"\n",
     "responses = get_channel_id_by_name(channel_name)\n",
     "print(responses)"
    ]
